3.0.0-SNAPSHOT
* Adds support to NGram() function
* Reverses the argument order of Append() and Prepend() functions
* Adds support to IsEmpty() and IsNonEmpty() functions
* Adds support to X-Last-Seen-Txn header
* Fixes NullPointerException when inspecting status code or error messages
from a UnknownException on the Scala driver

2.2.0
* Adds codecs to Map type
* Adds ability to create session clients on Scala
* Does not require `import faunadb.values._` when using `Codec.caseClass`
* Adds Null() function to scala

2.1.1
* Fix issue #143: Configured endpoint is overridden by request builder

2.1.0
* Adds support to Abort() function
* Adds normalizer argument to Casefold() function
* Adds support to NewId() function
* Deprecates NextId() function in favor of NewId()
* Adds support to Identity() and HasIdentity() functions
* Adds support to Singleton() and Events() functions
* Adds support to SelectAll() function

2.0.0
* Fix possible NullPointerException when checking for failing requests
* Adds support for user class serialization (encode/decode)
* Remove build dependency on GPG for automation purposes
* Adds support for recursive references

1.2.0
* Add support for scala 2.12.x
* Upgrade jackson to 2.8.8
* Default android driver to cloud if not endpoint is provided

1.1.0
* Adds support to @query type
* Add joda-convert to avoid compile time warnings
* Fix ambiguous reference when using Select/Contains functions

1.0.0
* Official release

0.4.0
* Adds support to @bytes type
* Adds support to KeyFromSecret() function
* Adds support to At() function
* Adds support to Android 4.1
* Downgrade async-http-client from verstion 2.0.2 to 1.9.39 to fully support Java 7
* Change default cloud url to https://db.fauna.com
* Adds optional timestamp parameter to Get function

0.3.3
* Removing count function from all drivers
* Adding next id function to scala driver
* Adding missing functions to all drivers:
	- class
	- database
	- index
	- create class
	- create database