@@ -5,6 +5,7 @@
 * Adds support to X-Last-Seen-Txn header
 * Fixes NullPointerException when inspecting status code or error messages
 from a UnknownException on the Scala driver
+* Adds ability to combine Fields
 
 2.2.0
 * Adds codecs to Map type
